# daas-course-project

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
apps/airspace_core/: __init__.py  core.py  main.py  mission.py  requirements.txt  rules.py
apps/control_gateway/: __init__.py  main.py  manual-drone-controller.py
apps/dashboard/: __init__.py  main.py  requirements.txt
apps/dashboard/static/: map.js  planner.js  style.css
apps/dashboard/templates/: index.html  planner.html
apps/drone_simulator/: __init__.py  fleet.py  main.py
docker/: compose.yml
docker/mosquitto/config/: mosquitto.conf
docs/: architecture.md  component-contracts.md  dashboard-demo.md  development-plan.md  team-split.md
docs/diagrams/: Deployment_Diagram_Team_18.drawio
scripts/: start_local.ps1
shared/: __init__.py  config.py  geo.py  models.py  schemas.py  topics.py
tests/: test_activation_idempotency.py  test_core_lifecycle.py  test_drone_takeoff.py  test_geo.py  test_mission_requests.py  test_mission_routes.py  test_rules.py  test_simulator_activation_clear.py  test_zone_commands.py
